<resources>
    <string name="app_name">CubicRectangle</string>
    <string name="movies_title">Movies</string>
    <string name="logo_name_start">Release</string>
    <string name="logo_name_end">It</string>
    <string name="nav_search">Search</string>
    <string name="cancel_search">Cancel search</string>
    <string name="clear_search">Clear search</string>
    <string name="search_movies">Search movies</string>
    <string name="network_error">Connection error</string>
    <string name="title_poster">Movie poster</string>
    <string name="like_count">Likes</string>
    <string name="title_launch_date">Launch date</string>
    <string name="title_runtime_format">%1$d min</string>
    <string name="details_current_page">%1$d</string>
    <string name="back">Back</string>
    <string name="back_button">Back</string>
    <string name="title_rating">Score</string>
    <string name="title_like_format">%1$d</string>
    <string name="unknown_runtime">\??? min</string>
    <string name="title_score">%1$.1f</string>
    <string name="retry">Retry</string>
    <string name="loading_data">Loading data</string>
    <string name="load_error">Load error</string>
</resources>
