<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="contract"
            type="dev.forcetower.cubicrectangle.view.genres.GenresContract.View" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            app:liftOnScroll="@bool/not_on_night_mode"
            style="@style/Widget.MaterialComponents.AppBarLayout.Surface">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/top_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <TextView
                    android:id="@+id/label_logo_name_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/logo_name_start"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/label_logo_name_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logo_name_end"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/label_logo_name_start"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageButton
                    android:id="@+id/btn_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:src="@drawable/ic_search_24dp"
                    android:tint="?attr/colorOnSurface"
                    android:contentDescription="@string/nav_search"
                    android:onClick="@{() -> contract.navigateToSearch()}"
                    style="@style/Widget.AppCompat.ButtonBar.AlertDialog"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                app:tabGravity="fill"
                app:tabTextColor="?attr/colorPrimary"
                app:tabIndicatorColor="?attr/colorPrimary"
                app:tabTextAppearance="@style/Release.Widget.TabLayout.TextAppearance"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager_genres"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>