<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="dev.forcetower.cubicrectangle.core.services.converters.TimeConverters" />
        <variable
            name="movie"
            type="dev.forcetower.cubicrectangle.model.database.Movie" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/title_details_corner"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/info_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_vertical_40"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".4" />

                <ImageView
                    android:id="@+id/image_poster"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/title_poster"
                    android:scaleType="centerCrop"
                    app:imageTmdbUrl="@{movie.posterPath}"
                    app:roundedViewRadius="@{@dimen/title_details_corner}"
                    app:layout_constraintDimensionRatio="H,10:15"
                    app:layout_constraintEnd_toStartOf="@id/guideline_vertical_40"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/backgrounds/scenic"/>

                <ImageView
                    android:id="@+id/image_backdrop"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/title_poster"
                    android:scaleType="centerCrop"
                    app:imageTmdbUrl="@{movie.backdropPath}"
                    app:roundedViewRadius="@{@dimen/title_details_corner}"
                    app:layout_constraintDimensionRatio="H,16:7.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline_vertical_40"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/backgrounds/scenic" />


                <LinearLayout
                    android:id="@+id/rating_layout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_corners_layout"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintBottom_toBottomOf="@id/image_poster"
                    app:layout_constraintEnd_toStartOf="@+id/like_layout"
                    app:layout_constraintStart_toEndOf="@id/guideline_vertical_40"
                    app:layout_constraintTop_toBottomOf="@id/image_backdrop">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_rating"
                        android:textAlignment="gravity"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center"
                        android:text="@{@string/title_score(movie.voteAverage)}"
                        android:textAlignment="gravity"
                        android:textColor="@color/titleScoreColor"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        tools:text="8.2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/like_layout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_corners_layout"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@id/image_poster"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/rating_layout"
                    app:layout_constraintTop_toBottomOf="@id/image_backdrop">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/like_count"
                        android:src="@drawable/ic_heart_outline_black_24dp"
                        android:tint="?attr/colorSecondary"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="87.124"
                        android:text="@{@string/title_like_format(movie.voteCount)}"
                        android:textAlignment="gravity"
                        android:textColor="?attr/colorAccent"
                        android:textSize="13sp"
                        android:gravity="center"/>
                </LinearLayout>

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/top_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="image_poster,like_layout,rating_layout"
                    app:barrierDirection="bottom"/>

                <TextView
                    android:id="@+id/text_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{movie.description}"
                    android:textSize="13sp"
                    android:layout_marginTop="16dp"
                    android:textColor="?android:textColorSecondary"
                    app:layout_constraintTop_toBottomOf="@id/top_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Após os graves incidentes do filme anterior, o menino Homi Aranha está de volta para mais um filme eletrizante de super heroi, desta vez ele faz o papel de um estagiário do grande e rico Tony Stark. Será que ele conseguirá manter o estágio?"/>

                <TextView
                    android:id="@+id/label_release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/title_launch_date"
                    android:textSize="12sp"
                    android:textColor="?android:textColorSecondary"
                    app:layout_constraintTop_toBottomOf="@id/text_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="07 de Julho de 2017"
                    android:text="@{TimeConverters.convertToDayYearFormat(movie.releaseDate)}"
                    android:textSize="15sp"
                    android:textColor="?android:textColorPrimary"
                    app:layout_constraintTop_toBottomOf="@id/label_release_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>
</layout>